# api_warehouse

./: .dockerignore  .env~  .gitignore  .gitignore~  README.md  cloudbuild-analysis.yaml  cloudbuild-dbt.yaml  cloudbuild-ingest.yaml  docker-deploy.sh  docker-push.sh  main.py  pyproject.toml
ingest/: .dockerignore  Dockerfile  Dockerfile~  README.md  main.py  pyproject.toml
ingest/migrations/: downgrade.sh  env.py  generate.sh  stamp_head.sh  status.sh  upgrade.sh
ingest/migrations/versions/: 2278a53cca40_initial.py  2a5b4d4826a6_add_trakt_schema.py  2aadebd00fb7_split_trakt_images_column.py  2e47476e4a92_restore_health_date_unique_constraints.py  42bb4c839eb1_add_hardcover_book_and_trakt_movie_show_.py  439e1fd5ebb0_trakt_bigint_ids.py  5179c5f3e323_add_health_schema_tables.py  8f2ae381154c_trakt_personal_show_ratings.py  8f4afc1e1630_endpoint_method_and_query.py  940ef246adfe_fix_health_civil_date_shape.py  94b45ca7bead_partial_index_for_now_playing_tracks.py  98585a3269e1_add_hardcover_schema.py  9f829f0ec0f9_trakt_personal_movie_ratings.py  a0c76360d096_fix_health_distance_column_name_to_.py  a3977bc0591e_add_spotify_track_album_artist_drop_top_.py  a623fe237597_add_generated_trakt_id_columns.py  ac162c1bec24_add_listened_at_to_recent_tracks.py  bb6b3cef68ed_drop_spotify_recently_played_track_.py  cc5908153b87_add_spotify_album_artist_images.py  cfcf71c9b18b_trakt_extended_fields.py  dbddaa16a92b_add_endpoint_param_refetch_if_null.py  fccbbd9dc489_add_trakt_movie_show_details_tables.py
ingest/scripts/: google_health_auth.py
ingest/src/api/: execution_client.py  (+6 more)
(+215 files in other folders)
