[project]
name = "api-warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18.4",
    "uvicorn>=0.49.0",
    "pydantic>=2.13.4",
    "pyaml>=26.7.0",
    "psycopg2-binary>=2.9.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*", "ingest*"]
